# ircfs

./: '  Cargo.toml  README.md  ircfs.toml
examples/: config_test.rs  createfifo.rs  dir_test.rs  ircfs.toml  riiir.toml
src/: config.rs  fifo.rs  filesystem.rs  ircfs.rs  lib.rs  main.rs  mem_safe_fs.rs  mem_safe_ircfs.rs  new_ircfs.rs  old_ircfs.rs  permissions.rs  test_ircfs.rs  tree_fs.rs
