[package]
name = "ircfs"
version = "0.1.0"
authors = ["Adam <sector-f@users.noreply.github.com>"]

[lib]
doc = false

[dependencies]
toml = "0.4.0"
serde = "1.0.2"
serde_derive = "1.0.2"
# daemonize = "0.2.3"
clap = "2.24.1"
libc = "0.2.22"
time = "0.1.37"
# fuse_mt = "0.4.1"
num_cpus = "1.5.1"
irc = "0.12.3"

[dependencies.fuse_mt]
git = "https://github.com/sector-f/fuse-mt.git"
rev = "d2a4101"
